--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "test": "node test.js",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "node server.js"
+    "server": "nodemon server.js",
+    "client": "npm run start --prefix client"
   },
   "author": "Ammar Lokh",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "concurrently": "^4.1.0",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
+    "form-urlencoded": "^3.0.0",
+    "node-fetch": "^2.3.0",
+    "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
