--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Spotify music sessions app using MERN stack",
   "main": "server.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "mocha -R spec test.js ",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
@@ -22,6 +22,9 @@
     "pug": "^2.0.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.6",
+    "should": "^13.2.3",
+    "supertest": "^3.3.0"
   }
 }
