--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha -R spec test.js ",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server.js",
+    "server": "nodemon --exec babel-node --presets env,stage-3 src/index.js",
     "client": "npm run start --prefix client"
   },
   "author": "Ammar Lokh",
@@ -16,12 +16,17 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "form-urlencoded": "^3.0.0",
     "node-fetch": "^2.3.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
     "should": "^13.2.3",
