--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "form-urlencoded": "^3.0.0",
+    "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
