--- a/package.json
+++ b/package.json
@@ -2,32 +2,62 @@
   "name": "music_sessions",
   "version": "1.0.0",
   "description": "Spotify music sessions app using MERN stack",
-  "main": "server.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "mocha -R spec test.js ",
+    "build": "NODE_ENV=production npx env-cmd .env webpack --config ./webpack/config-prod.babel.js",
+    "postinstall": "npm run build",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon --exec babel-node --presets env,stage-3 src/index.js",
+    "server": "nodemon --exec babel-node server/index.js",
     "client": "npm run start --prefix client"
   },
   "author": "Ammar Lokh",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
+    "env-cmd": "^8.0.2",
     "express": "^4.16.4",
+    "file-loader": "^2.0.0",
     "form-urlencoded": "^3.0.0",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
+    "node-sass": "^4.10.0",
     "pug": "^2.0.3",
-    "socket.io": "^2.2.0"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "sass-loader": "^7.1.0",
+    "socket.io": "^2.2.0",
+    "style-loader": "^0.23.1",
+    "svg-inline-loader": "^0.8.0",
+    "webpack": "^4.26.1",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-airbnb": "^3.0.1",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-dev": "^2.0.0",
+    "eslint-config-react-app": "^3.0.5",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
     "should": "^13.2.3",
